# flask-learn

./: README.md  pyproject.toml
flask-vue-crud/backend/: app.py
flask-vue-crud/frontend/: package.json  pnpm-lock.yaml
flask-vue-crud/frontend/src/: App.vue
flask-vue-crud/frontend/src/components/: Books.vue  Ping.vue
flask-vue-crud/frontend/src/router/: index.js
flaskr/: README.md  __init__.py  auth.py  blog.py  db.py  hello.py
