[tool.poetry]
name = "flask-learn"
version = "0.1.0"
description = "My Flask learning journey."
authors = ["Antony Nyagah <tony.m.nyagah@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "flask_learn"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
pytest = "^7.3.2"
coverage = "^7.2.7"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
